--- a/style.css
+++ b/style.css
@@ -18,19 +18,14 @@ p {
     line-height: 1.6;
 }
 
-/* Atividade 5, 15 e 20*/
+/* Atividade 5*/
 button {
     text-transform: uppercase;
-    color: white;
-    border: none;
-    background-color: #475569;
 }
 
-/* Atividade 6, 9 e 13*/
+/* Atividade 6*/
 .cartao {
     border: 1px solid #cbd5e1;
-    margin: 20px 10px;
-    background-color: white
 }
 
 /* Atividade 7 e 8*/
