--- a/style.css
+++ b/style.css
@@ -33,3 +33,21 @@ button {
     max-width: 800px;
     margin: auto;
 }
+
+/* Atividade 9*/
+.cartao {
+    border: 1px solid #cbd5e1;
+    margin: 20px 10px;
+    background-color: white
+}
+
+/* Atividade 10 */
+#rodape-principal {
+    border-top: 4px solid #3b82f6;
+}
+
+/* Atividade 11 e 12*/
+#cabecalho-principal {
+    background-color: #f8fafc;
+    color: #334155;
+}
